@@ -37,5 +37,6 @@ typedef struct _RS RS;
 extern RS *init_rs(int symsize, int gfpoly, int fcr, int prim, int nroots, int pad);
 extern void encode_rs_char(RS *rs, const unsigned char *data, unsigned char *parity);
 extern void free_rs_char(RS *rs);
+extern void free_rs_cache(void);
 
 #endif /* __RSCODE_H__ */
